@@ -3,6 +3,7 @@ Revision history for Test-Data-Split
 v0.2.0  Unknown
     - Now passing the data to contents_cb so it can be serialised into the
     file.
+    - Add Test::Data::Split::Backend::ValidateHash .
 
 v0.0.4  2016-01-02
     - Fix an erroneous List::MoreUtils::notall call in the hash backend.
